# qualitycode

./: .cursorrules  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  dsahboard.md  pyproject.toml  test.md  test_dead_code_fix.py  test_security_analyzer.py  test_tree_sitter.py
.cursor/: rules
FASES/: FASE_07_COMPLETADA.md  FASE_17_COMPLETADA.md  FASE_18_COMPLETADA.md  FASE_25_COMPLETADA.md  Fase_01_Infraestructura_Base.md  Fase_02_Gestion_Proyectos.md  Fase_03_Base_Datos.md  Fase_04_API_REST_Autenticacion.md  Fase_05_Logging_Metricas_Monitoreo.md  Fase_06_Parser_Universal_TreeSitter.md  Fase_07_Parser_Python_AST.md  Fase_08_Parser_TypeScript_JavaScript.md  Fase_09_Parser_Rust.md  Fase_10_Sistema_AST_Unificado.md  Fase_11_Motor_Reglas_Estaticas.md  Fase_12_Deteccion_Codigo_Muerto.md  Fase_13_Deteccion_Codigo_Duplicado.md  Fase_14_Analisis_Complejidad_Metricas.md  Fase_15_Categorizacion_Priorizacion_Issues.md  Fase_16_Integracion_Modelos_IA.md  Fase_17_Embeddings_Analisis_Semantico.md  Fase_18_Deteccion_Antipatrones_IA.md  Fase_19_Generador_Fixes_Sugerencias.md  Fase_20_Motor_Explicaciones_Lenguaje_Natural.md  Fase_21_Analisis_Incremental_Caching.md  Fase_22_Procesamiento_Distribuido_Paralelizacion.md  Fase_23_Deteccion_Vulnerabilidades_Seguridad.md  Fase_24_Analisis_Flujo_Datos_Control_Flow.md  Fase_25_Reglas_Personalizadas_Lenguaje_Natural.md  Fase_26_Dashboard_Web_Interactivo.md  Fase_27_Metricas_DORA_Reportes_Ejecutivos.md  Fase_28_Integraciones_CICD_Herramientas.md  Fase_29_Sistema_Actualizacion_Continua.md  Fase_30_Optimizacion_Final_Documentacion_Deployment.md  INTEGRACION_SISTEMA_INCREMENTAL.md
TODOs/: TODO_Fase_01.md  TODO_Fase_02.md  TODO_Fase_03.md  (+27 more)
(+432 files in other folders)
